--- a/For_Loops_Core_Starter_Notebook2.ipynb
+++ b/For_Loops_Core_Starter_Notebook2.ipynb
@@ -92,10 +92,10 @@
       ],
       "metadata": {
         "id": "mGaE09aHR4lc",
-        "outputId": "ee7adb59-bc6e-4b22-863b-dc5a58ef9c52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee7adb59-bc6e-4b22-863b-dc5a58ef9c52"
       },
       "execution_count": 23,
       "outputs": [
@@ -134,13 +134,26 @@
       "cell_type": "code",
       "source": [
         "# Create a list of the prices.\n",
-        "original_prices = [10, 15, 4, 1]"
+        "original_prices = [10, 15, 4, 1]\n",
+        "print(original_prices)"
       ],
       "metadata": {
-        "id": "1w5ccy0JSbmf"
+        "id": "1w5ccy0JSbmf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "895c84f9-e39b-4dfa-f495-1b2f71898a5f"
       },
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 15, 4, 1]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -158,30 +171,13 @@
       "cell_type": "code",
       "source": [
         "# Use a loop to append the sale_prices list with the sale price (a 20% discount means the original price is multiplied by .8)\n",
-        "sale_prices = original_prices * [8]"
+        "sale_prices = original_prices * 8"
       ],
       "metadata": {
-        "id": "VC4CMqr_S9Yw",
-        "outputId": "9d4b24af-f7b9-477a-8a40-337130cbce92",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        }
+        "id": "VC4CMqr_S9Yw"
       },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "can't multiply sequence by non-int of type 'list'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-c7240e7f72b2>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Use a loop to append the sale_prices list with the sale price (a 20% discount means the original price is multiplied by .8)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msale_prices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moriginal_prices\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
-          ]
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -191,10 +187,10 @@
       ],
       "metadata": {
         "id": "dGWiS6OBQZoB",
-        "outputId": "c24105f9-1278-419d-85c1-72e922d62a30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c24105f9-1278-419d-85c1-72e922d62a30"
       },
       "execution_count": 28,
       "outputs": [
