--- a/Abalone_Pre_Preprocessing_(Core).ipynb
+++ b/Abalone_Pre_Preprocessing_(Core).ipynb
@@ -3,10 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1OjMC6G0AMwZn0Ss-1tMmQ5KJwYWLczaq",
-      "authorship_tag": "ABX9TyP1dUzPBz+hNQV+o444TnpQ",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mwebazejunior/mwebazejunior/blob/main/Abalone_Pre_Preprocessing_(Core).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": 1,
